fixed some expression

--- a/1~100/4. Median of Two Sorted Arrays.md
+++ b/1~100/4. Median of Two Sorted Arrays.md
@@ -2,38 +2,40 @@
 中位数的作用：将一组数分为2个等长的子数组，其中一个数组中的任意数字都比另一个数组大。
 
 假设输入数组为`A, B`。`A`中取坐标`i`，`B`中取坐标`j`作为分割，则记  
-```
+```javascript
 L = A.left + B.left;
 R = A.right + B.right;
 ```  
 由中位数定义可知`L.length == R.length`，于是得到  
+```javascript
+i + j == A.length - i + B.length - j (or: A.length - i + B.length - j + 1)
 ```
-i + j = A.length - i + B.length - j (or: A.length - i + B.length - j + 1)
+即
+```javascript
+j == (A.length + B.length + 1) / 2 - i
 ```
-即`j = (A.length + B.length + 1) / 2 - i`  
 因此我们只需要知道`i`的位置，即可知道2个数组是如何划分的，即可知道中位数。
 
 下面通过二分查找确定`i`的位置（确保`A.length < B.length`）。  
 取`A`的开始作为起始点`imin = 0`，`A`的结束作为终点`imax = A.length`，则  
-```
+```javascript
 i = (imin + imax) / 2;
 j = (A.length + B.length + 1) / 2 - i;
 ```
 我们需要完成两件事情，即保证
-```
-A[i-1] < B[j] // A.left < B.right
-B[j-1] < A[i] // B.left < A.right
+```javascript
+A[i - 1] < B[j] // A.left < B.right
+B[j - 1] < A[i] // B.left < A.right
 ```
 这样的结果`i, j`即为我们的答案，则得到
-```
+```javascript
 // A.left > B.right, i should move left
-if (A[i-1] > B[j]) max = i - 1;
+if (A[i - 1] > B[j]) max = i - 1;
 // B.left > A.right, i should move right
-if (B[j-1] > A[i]) min = i + 1;
+if (B[j - 1] > A[i]) min = i + 1;
 ```
-上述结果均不满足，则获得结果`i, j`，这里需要考虑到数组总长度的奇偶情况
-即
-```
+上述结果均不满足，则获得结果`i, j`，这里需要考虑到数组总长度的奇偶情况，即
+```javascript
 if ((A.length + B.length) % 2) {
     // odd
     median = leftMax;
@@ -43,7 +45,7 @@ if ((A.length + B.length) % 2) {
 }
 ```
 最后我们需要考虑到边界情况
-```
+```javascript
 if (i == 0) leftMax = B[j - 1]
 else if (j == 0) leftMax = A[i - 1]
 else leftMax = Math.max(A[i-1], B[j-1]);
