fixed expression problems

--- a/1~100/5. Longest Palindromic Substring.md
+++ b/1~100/5. Longest Palindromic Substring.md
@@ -22,7 +22,7 @@ P = 0 1 0 3 0 1 0 7 0 1 0 9 0 1 0 ?
 接着研究当前所需计算的位置`i`，按照对称规律可得`P[i] == P[i']`，即`P[i] == 7`。  
 但是我们验证一遍发现`P[i] == 5`而并不是`7`，这是为什么呢？  
 可以看到，**回文串C**结束处为`R`，而假设`P[i] == 7`，则**回文串i**的结束位置在`R'`，超过了`R`，即**回文串i**并不是**回文串C**的子串。
-在此条件下，**超出部分**（即`R`到`R'`部分）并不能保证回文，需要一个个字符判断。  
+在此条件下，**超出部分**（即`R`到`R'`部分）并不能保证回文，需要一个一个字符判断。  
 此时我们可以确定`P[i] >= R - i`。
 * 综上`P[i]`可总共分为3种情况：
   * `i + P[i'] <= C + P[C]`，即**回文串i**为**回文串C**的字串时：  
